@@ -1,3 +1,3 @@
 #/bin/sh
 
-ofcfrth --title="Forth Foundation Library" --dir=../html --wiki=../../ffl-wiki/new --exa=../examples --api=ffl.api *.fs
+ofcfrth --title="Forth Foundation Library" --dir=../html --wiki=../../ffl-wiki --exa=../examples --api=ffl.api *.fs
